# ImageBasedModellingEduV1.0

./: CMakeLists.txt  README.md
cmake/: FindEigen.cmake
core/: CMakeLists.txt  Makefile.dep  bundle.cc  bundle.h  bundle_io.cc  bundle_io.h  camera.cc  camera.h  defines.h  depthmap.cc  depthmap.h  image.h  image_base.h  image_color.h  image_drawing.h  image_exif.cc  image_exif.h  image_io.cc  image_io.h  image_tools.cc  image_tools.h  mesh.cc  mesh.h  mesh_info.cc  mesh_info.h  mesh_io.cc  mesh_io.h  mesh_io_npts.cc  mesh_io_npts.h  mesh_io_obj.cc  mesh_io_obj.h  mesh_io_off.cc  mesh_io_off.h  mesh_io_pbrt.cc  mesh_io_pbrt.h  mesh_io_ply.cc  mesh_io_ply.h  mesh_io_smf.cc  mesh_io_smf.h  mesh_tools.cc  (+5 more)
examples/: CMakeLists.txt
examples/data/sequence_scene/: surface_mesh_clean.ply  textured.conf
examples/task1/: CMakeLists.txt  class1_test_features.cc  class1_test_matching.cc
examples/task2/: CMakeLists.txt  calss2_test_pose_from_fundamental.cc  class2_test_camera.cc  class2_test_fundamental_8_point.cc  class2_test_fundamental_ransac.cc  class2_test_fundamental_ransac的副本.cc  class2_test_math_basic.cc  correspondences.txt  test_ba.txt  visualizer.cc  visualizer.h
examples/task3/: CMakeLists.txt  class3_test_bundle_adjustment.cc  class3_test_jacobian.cc  class3_test_lm_optimize.cc  class3_test_p3p.cc  class3_test_triangle.cc
examples/task4/: CMakeLists.txt  class4_test_incremental_sfm.cc  defines.h  functions.cc  functions.h
examples/task5/: CMakeLists.txt  class5_dmrecon_multi_views.cc  class5_dmrecon_single_view.cc  class5_scene2pset_multi_views.cc  class5_scene2pset_single_view.cc
examples/task6/: CMakeLists.txt  class6_surface_reconstruction.cc
examples/task7/: CMakeLists.txt  arguments.h  class7_meshclean.cc  class7_texrecon.cpp
features/: CMakeLists.txt  cascade_hashing.cc  cascade_hashing.h  defines.h  exhaustive_matching.cc  exhaustive_matching.h  matching.cc  matching.h  matching_base.h  nearest_neighbor.cc  nearest_neighbor.h  sift.cc  sift.h  surf.cc  surf.h
math/: CMakeLists.txt  algo.h
mvs/: CMakeLists.txt  defines.h  dmrecon.cc  dmrecon.h  global_view_selection.cc  global_view_selection.h  image_pyramid.cc  image_pyramid.h  local_view_selection.cc  local_view_selection.h  mvs_tools.cc  mvs_tools.h  patch_optimization.cc  patch_optimization.h  patch_sampler.cc  patch_sampler.h  progress.h  settings.h  single_view.cc  single_view.h  view_selection.h
sfm/: CMakeLists.txt  ba_linear_solver.cc  ba_linear_solver.h  ba_sparse_matrix.h  bundle_adjustment.cc  bundle_adjustment.h  bundler_common.h  bundler_features.cc  bundler_features.h  bundler_incremental.cc  bundler_incremental.h  bundler_init_pair.cc  bundler_intrinsics.cc  bundler_intrinsics.h  bundler_matching.cc  bundler_matching.h  bundler_tracks.cc  bundler_tracks.h  defines.h  extract_focal_length.cc  extract_focal_length.h  feature_set.cc  feature_set.h  fundamental.cc  fundamental.h  ransac_fundamental.cc  triangulate.cc
surface/: CMakeLists.txt  basis_function.cc  basis_function.h  defines.h  hermite.cc  hermite.h  iso_octree.cc  iso_octree.h  iso_surface.cc  iso_surface.h  mesh_clean.cc  mesh_clean.h  octree.cc  octree.h  sample.h  sample_io.cc  sample_io.h  triangulation.cc  triangulation.h  voxel.cc  voxel.h
texturing/: CMakeLists.txt  build_adjacency_graph.cpp  build_obj_model.cpp  calculate_data_costs.cpp  generate_debug_embeddings.cpp  generate_texture_atlases.cpp  generate_texture_patches.cpp  generate_texture_views.cpp  global_seam_leveling.cpp  histogram.cpp  local_seam_leveling.cpp  material_lib.cpp  material_lib.h  obj_model.cpp  poisson_blending.cpp  poisson_blending.h  prepare_mesh.cpp  seam_leveling.cpp  seam_leveling.h  texture_atlas.cpp  texture_atlas.h  texture_patch.cpp  texture_patch.h  texture_view.cpp  texture_view.h  texturing.h  view_selection.cpp
util/: CMakeLists.txt  Makefile.dep
